examples/test/testpolicy8646.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8646
  namespace: namespace46
spec:
  podSelector:
    matchLabels:
      key38: value34
      key8: value49
      key22: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value20
          key43: value34
      podSelector:
        matchLabels:
          key32: value14
          key8: value33
